// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VolumeSize renders correctly with all props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.cache-lf82tu-StyledComponentContainer {
  margin-bottom: 40px;
}

.cache-1etycza-StyledBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles.cache-3gen6c-StyledText-bodyA-variantStyles {
  margin-right: 16px;
  font-weight: 500;
}

.cache-10lmphu-StyledTitle {
  margin-right: 5px;
}

.cache-uju3zv-StyledValue {
  font-weight: 800;
  color: #4a4f62;
}

.cache-1qax16t-StyledIcon-sizeStyles {
  fill: #45d6b5;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1qax16t-StyledIcon-sizeStyles.cache-1qax16t-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 8px;
}

.cache-1sqk4er-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

.cache-gumfey-StyledVolumeContainer {
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

.cache-3s2z8q-StyledVolume {
  background-color: #22c8a2;
  border-radius: 3px 0 0 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 68.94736842105263%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

.cache-1qm2gcn-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 10%;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.cache-11k00r2-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

.cache-hb0k5i-StyledLabel {
  text-align: left;
}

.cache-1iwlirh-StyledText-bodyC-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

.cache-uybk0c-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  right: 10%;
}

.cache-1xvmsns-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  right: 0;
}

.cache-1h8iqxp-StyledLabel {
  text-align: right;
}

<div
    class="cache-lf82tu-StyledComponentContainer e21aiwm0"
  >
    <div
      aria-live="polite"
      class="cache-1etycza-StyledBox e21aiwm1"
      role="status"
    >
      <p
        class="e1g1zfwd0 cache-3gen6c-StyledText-bodyA-variantStyles"
      >
        <span
          class="cache-10lmphu-StyledTitle e21aiwm9"
        >
          Test
        </span>
        <span
          class="cache-uju3zv-StyledValue e21aiwm8"
        >
          15 GB
        </span>
      </p>
      <svg
        class="sc-ui-icon etwatq50 cache-1qax16t-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </div>
    <div
      class="cache-1sqk4er-StyledContainer e21aiwm7"
    >
      <div
        class="cache-gumfey-StyledVolumeContainer e21aiwm6"
      >
        <span
          class="cache-3s2z8q-StyledVolume e21aiwm5"
        />
      </div>
      <div
        class="cache-1qm2gcn-StyledCursor e21aiwm4"
      >
        <div
          class="cache-11k00r2-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-hb0k5i-StyledLabel e21aiwm2"
          >
            0 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            min
          </p>
        </div>
      </div>
      <div
        class="cache-uybk0c-StyledCursor e21aiwm4"
      >
        <div
          class="cache-1xvmsns-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-1h8iqxp-StyledLabel e21aiwm2"
          >
            20 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            max
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize renders correctly with minimal props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.cache-lf82tu-StyledComponentContainer {
  margin-bottom: 40px;
}

.cache-1etycza-StyledBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles.cache-3gen6c-StyledText-bodyA-variantStyles {
  margin-right: 16px;
  font-weight: 500;
}

.cache-10lmphu-StyledTitle {
  margin-right: 5px;
}

.cache-uju3zv-StyledValue {
  font-weight: 800;
  color: #4a4f62;
}

.cache-1qax16t-StyledIcon-sizeStyles {
  fill: #45d6b5;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1qax16t-StyledIcon-sizeStyles.cache-1qax16t-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 8px;
}

.cache-1sqk4er-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

.cache-gumfey-StyledVolumeContainer {
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

.cache-ued2sv-StyledVolume {
  background-color: #22c8a2;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 250%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

.cache-1lxujhg-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-11k00r2-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

.cache-hb0k5i-StyledLabel {
  text-align: left;
}

.cache-1iwlirh-StyledText-bodyC-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="cache-lf82tu-StyledComponentContainer e21aiwm0"
  >
    <div
      aria-live="polite"
      class="cache-1etycza-StyledBox e21aiwm1"
      role="status"
    >
      <p
        class="e1g1zfwd0 cache-3gen6c-StyledText-bodyA-variantStyles"
      >
        <span
          class="cache-10lmphu-StyledTitle e21aiwm9"
        />
        <span
          class="cache-uju3zv-StyledValue e21aiwm8"
        >
          5 GB
        </span>
      </p>
      <svg
        class="sc-ui-icon etwatq50 cache-1qax16t-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </div>
    <div
      class="cache-1sqk4er-StyledContainer e21aiwm7"
    >
      <div
        class="cache-gumfey-StyledVolumeContainer e21aiwm6"
      >
        <span
          class="cache-ued2sv-StyledVolume e21aiwm5"
        />
      </div>
      <div
        class="cache-1lxujhg-StyledCursor e21aiwm4"
      >
        <div
          class="cache-11k00r2-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-hb0k5i-StyledLabel e21aiwm2"
          >
            0 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize renders correctly with non modifiable value 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.cache-lf82tu-StyledComponentContainer {
  margin-bottom: 40px;
}

.cache-1etycza-StyledBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles.cache-3gen6c-StyledText-bodyA-variantStyles {
  margin-right: 16px;
  font-weight: 500;
}

.cache-10lmphu-StyledTitle {
  margin-right: 5px;
}

.cache-uju3zv-StyledValue {
  font-weight: 800;
  color: #4a4f62;
}

.cache-1qax16t-StyledIcon-sizeStyles {
  fill: #45d6b5;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1qax16t-StyledIcon-sizeStyles.cache-1qax16t-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 8px;
}

.cache-1sqk4er-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

.cache-gumfey-StyledVolumeContainer {
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

.cache-dadaxe-StyledVolume {
  background-color: #22c8a2;
  border-radius: 3px 0 0 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 10%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

.cache-1qm2gcn-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 10%;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.cache-11k00r2-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

.cache-hb0k5i-StyledLabel {
  text-align: left;
}

.cache-1iwlirh-StyledText-bodyC-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

.cache-uybk0c-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  right: 10%;
}

.cache-1xvmsns-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  right: 0;
}

.cache-1h8iqxp-StyledLabel {
  text-align: right;
}

<div
    class="cache-lf82tu-StyledComponentContainer e21aiwm0"
  >
    <div
      aria-live="polite"
      class="cache-1etycza-StyledBox e21aiwm1"
      role="status"
    >
      <p
        class="e1g1zfwd0 cache-3gen6c-StyledText-bodyA-variantStyles"
      >
        <span
          class="cache-10lmphu-StyledTitle e21aiwm9"
        >
          Test
        </span>
        <span
          class="cache-uju3zv-StyledValue e21aiwm8"
        >
          15 GB
        </span>
      </p>
      <svg
        class="sc-ui-icon etwatq50 cache-1qax16t-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </div>
    <div
      class="cache-1sqk4er-StyledContainer e21aiwm7"
    >
      <div
        class="cache-gumfey-StyledVolumeContainer e21aiwm6"
      >
        <span
          class="cache-dadaxe-StyledVolume e21aiwm5"
        />
      </div>
      <div
        class="cache-1qm2gcn-StyledCursor e21aiwm4"
      >
        <div
          class="cache-11k00r2-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-hb0k5i-StyledLabel e21aiwm2"
          >
            15 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            minimum
          </p>
        </div>
      </div>
      <div
        class="cache-uybk0c-StyledCursor e21aiwm4"
      >
        <div
          class="cache-1xvmsns-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-1h8iqxp-StyledLabel e21aiwm2"
          >
            15 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            maximum
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize renders correctly without maxSize 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.cache-lf82tu-StyledComponentContainer {
  margin-bottom: 40px;
}

.cache-1etycza-StyledBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles.cache-3gen6c-StyledText-bodyA-variantStyles {
  margin-right: 16px;
  font-weight: 500;
}

.cache-10lmphu-StyledTitle {
  margin-right: 5px;
}

.cache-uju3zv-StyledValue {
  font-weight: 800;
  color: #4a4f62;
}

.cache-1qax16t-StyledIcon-sizeStyles {
  fill: #45d6b5;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1qax16t-StyledIcon-sizeStyles.cache-1qax16t-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 8px;
}

.cache-1sqk4er-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

.cache-gumfey-StyledVolumeContainer {
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

.cache-1nxuex5-StyledVolume {
  background-color: #22c8a2;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 750%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

.cache-1lxujhg-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-11k00r2-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

.cache-hb0k5i-StyledLabel {
  text-align: left;
}

.cache-1iwlirh-StyledText-bodyC-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="cache-lf82tu-StyledComponentContainer e21aiwm0"
  >
    <div
      aria-live="polite"
      class="cache-1etycza-StyledBox e21aiwm1"
      role="status"
    >
      <p
        class="e1g1zfwd0 cache-3gen6c-StyledText-bodyA-variantStyles"
      >
        <span
          class="cache-10lmphu-StyledTitle e21aiwm9"
        >
          Test
        </span>
        <span
          class="cache-uju3zv-StyledValue e21aiwm8"
        >
          15 GB
        </span>
      </p>
      <svg
        class="sc-ui-icon etwatq50 cache-1qax16t-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </div>
    <div
      class="cache-1sqk4er-StyledContainer e21aiwm7"
    >
      <div
        class="cache-gumfey-StyledVolumeContainer e21aiwm6"
      >
        <span
          class="cache-1nxuex5-StyledVolume e21aiwm5"
        />
      </div>
      <div
        class="cache-1lxujhg-StyledCursor e21aiwm4"
      >
        <div
          class="cache-11k00r2-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-hb0k5i-StyledLabel e21aiwm2"
          >
            0 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize should display too big error 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.cache-lf82tu-StyledComponentContainer {
  margin-bottom: 40px;
}

.cache-1etycza-StyledBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles.cache-3gen6c-StyledText-bodyA-variantStyles {
  margin-right: 16px;
  font-weight: 500;
}

.cache-10lmphu-StyledTitle {
  margin-right: 5px;
}

.cache-1l06wf9-StyledValue {
  font-weight: 800;
  color: #ff8c69;
}

.cache-xpf055-StyledIcon-sizeStyles {
  fill: #ff8c69;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-xpf055-StyledIcon-sizeStyles.cache-xpf055-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 8px;
}

.cache-1h2du5-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

.cache-1sqk4er-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

.cache-gumfey-StyledVolumeContainer {
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

.cache-b0shv3-StyledVolume {
  background-color: #ff8c69;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 140%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

.cache-1qm2gcn-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 10%;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.cache-11k00r2-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

.cache-hb0k5i-StyledLabel {
  text-align: left;
}

.cache-1iwlirh-StyledText-bodyC-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

.cache-uybk0c-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  right: 10%;
}

.cache-1xvmsns-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  right: 0;
}

.cache-1h8iqxp-StyledLabel {
  text-align: right;
}

<div
    class="cache-lf82tu-StyledComponentContainer e21aiwm0"
  >
    <div
      aria-live="polite"
      class="cache-1etycza-StyledBox e21aiwm1"
      role="status"
    >
      <p
        class="e1g1zfwd0 cache-3gen6c-StyledText-bodyA-variantStyles"
      >
        <span
          class="cache-10lmphu-StyledTitle e21aiwm9"
        >
          Test
        </span>
        <span
          class="cache-1l06wf9-StyledValue e21aiwm8"
        >
          25 GB
        </span>
      </p>
      <svg
        class="sc-ui-icon etwatq50 cache-xpf055-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
        class="e1g1zfwd0 cache-1h2du5-StyledText-bodyA-variantStyles-colorStyles"
      >
        Test too big
      </p>
    </div>
    <div
      class="cache-1sqk4er-StyledContainer e21aiwm7"
    >
      <div
        class="cache-gumfey-StyledVolumeContainer e21aiwm6"
      >
        <span
          class="cache-b0shv3-StyledVolume e21aiwm5"
        />
      </div>
      <div
        class="cache-1qm2gcn-StyledCursor e21aiwm4"
      >
        <div
          class="cache-11k00r2-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-hb0k5i-StyledLabel e21aiwm2"
          >
            0 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            minimum
          </p>
        </div>
      </div>
      <div
        class="cache-uybk0c-StyledCursor e21aiwm4"
      >
        <div
          class="cache-1xvmsns-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-1h8iqxp-StyledLabel e21aiwm2"
          >
            20 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            maximum
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize should display too small error 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.cache-lf82tu-StyledComponentContainer {
  margin-bottom: 40px;
}

.cache-1etycza-StyledBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-3gen6c-StyledText-bodyA-variantStyles.cache-3gen6c-StyledText-bodyA-variantStyles {
  margin-right: 16px;
  font-weight: 500;
}

.cache-10lmphu-StyledTitle {
  margin-right: 5px;
}

.cache-1l06wf9-StyledValue {
  font-weight: 800;
  color: #ff8c69;
}

.cache-xpf055-StyledIcon-sizeStyles {
  fill: #ff8c69;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-xpf055-StyledIcon-sizeStyles.cache-xpf055-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 8px;
}

.cache-1h2du5-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

.cache-1sqk4er-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

.cache-gumfey-StyledVolumeContainer {
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

.cache-kgnioj-StyledVolume {
  background-color: #ff8c69;
  border-radius: 3px 0 0 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 37.5%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

.cache-1lxujhg-StyledCursor {
  background-color: #000000;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-11k00r2-StyledLabelContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

.cache-hb0k5i-StyledLabel {
  text-align: left;
}

.cache-1iwlirh-StyledText-bodyC-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="cache-lf82tu-StyledComponentContainer e21aiwm0"
  >
    <div
      aria-live="polite"
      class="cache-1etycza-StyledBox e21aiwm1"
      role="status"
    >
      <p
        class="e1g1zfwd0 cache-3gen6c-StyledText-bodyA-variantStyles"
      >
        <span
          class="cache-10lmphu-StyledTitle e21aiwm9"
        >
          Test
        </span>
        <span
          class="cache-1l06wf9-StyledValue e21aiwm8"
        >
          15 GB
        </span>
      </p>
      <svg
        class="sc-ui-icon etwatq50 cache-xpf055-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
        class="e1g1zfwd0 cache-1h2du5-StyledText-bodyA-variantStyles-colorStyles"
      >
        Test too small
      </p>
    </div>
    <div
      class="cache-1sqk4er-StyledContainer e21aiwm7"
    >
      <div
        class="cache-gumfey-StyledVolumeContainer e21aiwm6"
      >
        <span
          class="cache-kgnioj-StyledVolume e21aiwm5"
        />
      </div>
      <div
        class="cache-1lxujhg-StyledCursor e21aiwm4"
      >
        <div
          class="cache-11k00r2-StyledLabelContainer e21aiwm3"
        >
          <div
            class="cache-hb0k5i-StyledLabel e21aiwm2"
          >
            20 GB
          </div>
          <p
            class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
